# rastro

./: .gitignore  AGENTS.md  HISTORY.md  PLAN.md  README.md  REGUA.md  codex_labs_generator.md  pyproject.toml
docs/: architecture.md  authorization-demo.md  aws-attack-coverage.md  aws-first-real-path-poc.html  aws-first-real-path-poc.md  cross-account-real-validation.md  path-3-role-choice-learning.md  product01-discovery-target-selection.md  rastro_manifesto_v4.html  rastro_pitch_base.md  synthetic-aws-environments.md
examples/: authorization_aws_blind_real.json  authorization_aws_blind_real_attach_role_policy_only.json  authorization_aws_blind_real_iamheavy.json  authorization_aws_blind_real_role_chaining_only.json  authorization_aws_foundation.local.json  authorization_novapay.json  objective.json  objective_aws_backtracking.json  objective_aws_backtracking_ambiguous_analyze.json  objective_aws_backtracking_loop_trap.json  objective_aws_backtracking_three_pivots_deep.json  objective_aws_deeper_branching.json  objective_aws_dry_run.json  objective_aws_iam_role_chaining_portfolio.json  objective_aws_iam_s3_portfolio.json  objective_aws_iam_secrets_portfolio.json  objective_aws_iam_ssm_portfolio.json  objective_aws_multi_branch_backtracking.json  objective_aws_permuted_branching.json  objective_aws_permuted_branching_ambiguous.json  objective_aws_permuted_branching_deep_noisy.json  objective_aws_permuted_branching_noisy.json  objective_aws_permuted_branching_weak_signal_tight.json  objective_aws_role_choice.json  objective_aws_s3_discovery.json  (+90 more)
tests/: test_mvp.py
(+293 files in other folders)
