[project]
name = "rastro"
version = "0.1.0"
description = "Controlled, auditable LLM-assisted pentest agent MVP"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.9.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
ollama = [
  "httpx>=0.28.0",
]
openai = [
  "openai>=1.0.0",
]
claude = [
  "anthropic>=0.34.0",
]
aws = [
  "boto3>=1.34.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
